# box

./: .env.example  .envrc  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  pytest.ini  starter.txt
apps/validator/: __init__.py  main.py
contracts/catalog-service/: openapi.yaml  service.yaml
contracts/party-service/: openapi.yaml  service.yaml
contracts/transaction-service/: openapi.yaml  service.yaml
deploy/helm/: README.md
docs/: README.md
docs/adr/: 0001-contract-first-platform.md
docs/agents/: README.md  implementation.md  planning.md  release-ops.md  review.md
docs/architecture/: README.md  data-architecture.md  implementation-plan.md  platform-architecture.md
docs/features/: README.md  foundation-and-kernel.md  platform-and-gitops.md  replacement-proof.md  scenario-simulation.md
docs/knowledge/: README.md  knowledge-base.md
docs/product/: vision.md
docs/runbooks/: project-working-practices.md  sprint-and-knowledge-operations.md
docs/scenarios/: README.md
docs/sprint-snapshots/: README.md  backlog-master.txt  sprint-current.txt
infra/examples/: README.md  compose.yaml
infra/talos/: README.md  cluster.yaml.example
requirements/: README.md  backlog-staging.md  core-platform.md  infrastructure.md  replacement-proof.md  scenario-simulation.md
scenario-packs/hotdog-stand/: scenario.yaml
scenario-packs/it-consultancy/: scenario.yaml
schemas/: scenario-pack.schema.json  service-contract.schema.json
services/party-service/: README.md
tests/: test_contract_validation.py  test_docs_contract.py  test_scenario_validation.py
(+21 files in other folders)
